--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,26 +39,31 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.6"
+
+    //implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta03"
+
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
 
     implementation 'com.google.android.material:material:1.3.0'
 
     implementation 'androidx.core:core-ktx:1.3.2'
-   // implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.4'
     
-    implementation "androidx.window:window:1.0.0-alpha04"
+    implementation "androidx.window:window:1.0.0-alpha05"
+    implementation "androidx.activity:activity-ktx:1.2.2"
+    implementation "androidx.fragment:fragment-ktx:1.3.2"
 
-    implementation "androidx.activity:activity-ktx:1.2.1"
-
-    implementation "androidx.fragment:fragment-ktx:1.3.1"
-    // Testing Fragments in Isolation
 
     implementation 'com.github.kekadoc:android-tools:0.2.0-alpha.5'
 
@@ -66,8 +71,11 @@ dependencies {
     implementation 'com.vk:androidsdk:2.2.0'
     implementation 'org.jsoup:jsoup:1.13.1'
 
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    debugImplementation "androidx.fragment:fragment-testing:1.3.1"
+    debugImplementation "androidx.fragment:fragment-testing:1.3.2"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
 }
